# opencode-manager

./: .envrc  .gitignore  CHANGELOG.md  README.md  justfile  opencode.json  package.json  pyproject.toml  tsconfig.json  vulture_whitelist.py
.github/workflows/: ci.yml  publish.yml
config/: known_limit_patterns.json
docs/: proof-contract.md  release-questions.md
src/: cli.ts  session-harness.ts  transcript-cli.ts  transcript.ts  workflow.ts
src/opencode_manager/: __init__.py  cli.py  client.py  config.py  contracts.py  errors.py  transcript.py  transcript_cli.py
test-support/opencode/: opencode.json
tests/: __init__.py  cli-help.test.ts  conftest.py  session-harness.test.ts  test_cli_live.py  test_client.py  test_doctor.py  test_transcript.py  transcript.test.ts
tests/fixtures/: sample-export.json  transcript-multiturn.json
