[project]
name = "opencode-manager"
version = "3.0.0"
description = "Proof-first workflow CLI for OpenCode session orchestration"
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=4.10.0",
    "httpx>=0.28.1",
    "opencode-ai>=0.1.0a36",
    "pydantic>=2.12.0",
]

[project.scripts]
ocm = "opencode_manager.cli:main"
opencode-manager = "opencode_manager.cli:main"
opencode-transcript = "opencode_manager.transcript_cli:main"

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "pytest>=8.4.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencode_manager"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = ["live: requires the prepared isolated OpenCode server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src", "tests"]
